--- a/tri.html
+++ b/tri.html
@@ -20,14 +20,14 @@
 
   </div>
 
- <h2>Click here to see the time!</h2>
+ <h2>Click here to see the time!!</h2>
           <button type="button"
           onclick="document.getElementById('demo').innerHTML = Date()">
           Click me to display Date and Time.</button>
   <p id="demo"></p>
 
 </div>
-<h1>There three differnt types of traingles;</h1>
+<h1>There 3 differnt types of traingles;</h1>
 <p>For example;</p>
 <ul>
   <div class="column">
