added a fullstop in p

--- a/tri.html
+++ b/tri.html
@@ -28,7 +28,7 @@
 
 </div>
 <h1>There 3 differnt types of traingles;</h1>
-<p>For example;</p>
+<p>For example .;</p>
 <ul>
   <div class="column">
   <li>The Isosceles Triangle</li><img src="/home/njoroge/Desktop/tri/images/ISOSCLES .gif" alt="">
