added a fullstop in h2

--- a/tri.html
+++ b/tri.html
@@ -7,7 +7,7 @@
     <script src="js/script.js"></script>
 
   </head>
-   <h1>TRIANGLE TRACKER!!!</h1>
+   <h1>TRIANGLE TRACKER!!!.</h1>
   <body background="images/background image.gif">
   <div class="Formula">
   <br>ENTER YOUR FIRST SIDE!!!!!: <input type="number" id="Triangle1"></br>
@@ -20,7 +20,7 @@
 
   </div>
 
- <h2>Click here to see the time!!</h2>
+ <h2>Click here to see the time.!!</h2>
           <button type="button"
           onclick="document.getElementById('demo').innerHTML = Date()">
           Click me to display Date and Time.</button>
@@ -31,7 +31,7 @@
 <p>For example .;</p>
 <ul>
   <div class="column">
-  <li>The Isosceles Triangle.</li><img src="/home/njoroge/Desktop/tri/images/ISOSCLES .gif" alt="">
+  <li>The Isosceles Triangle</li><img src="/home/njoroge/Desktop/tri/images/ISOSCLES .gif" alt="">
 
 
   <li>The Equilateral Triangle</li><img src="images/equilatersl .jpg" alt="">
