--- a/tri.html
+++ b/tri.html
@@ -7,7 +7,7 @@
     <script src="js/script.js"></script>
 
   </head>
-   <h1>TRIANGLE TRACKER!!!.</h1>
+   <h1>TRIANGLE TRACKER!!!..</h1>
   <body background="images/background image.gif">
   <div class="Formula">
   <br>ENTER YOUR FIRST SIDE!!!!!: <input type="number" id="Triangle1"></br>
