added a fullstop in h2

--- a/tri.html
+++ b/tri.html
@@ -20,7 +20,7 @@
 
   </div>
 
- <h2>Click here to see the time.!!</h2>
+ <h2>Click here to see the time..!!</h2>
           <button type="button"
           onclick="document.getElementById('demo').innerHTML = Date()">
           Click me to display Date and Time.</button>
