added a exclamation mark in li

--- a/tri.html
+++ b/tri.html
@@ -37,7 +37,7 @@
   <li>The Equilateral Triangle!</li><img src="images/equilatersl .jpg" alt="">
 
 
-  <li>The Scalene Triangle</li><img src="/home/njoroge/Desktop/tri/images/scalene.gif" alt="">
+  <li>The Scalene Triangle!</li><img src="/home/njoroge/Desktop/tri/images/scalene.gif" alt="">
   </div>
 
   </ul>
