--- a/tri.html
+++ b/tri.html
@@ -31,7 +31,7 @@
 <p>For example .;</p>
 <ul>
   <div class="column">
-  <li>The Isosceles Triangle!!</li><img src="/home/njoroge/Desktop/tri/images/ISOSCLES .gif" alt="">
+  <li>The Isosceles Triangle!!!</li><img src="/home/njoroge/Desktop/tri/images/ISOSCLES .gif" alt="">
 
 
   <li>The Equilateral Triangle!!</li><img src="images/equilatersl .jpg" alt="">
