added a exclamation mark in li

--- a/tri.html
+++ b/tri.html
@@ -34,7 +34,7 @@
   <li>The Isosceles Triangle!!!!</li><img src="/home/njoroge/Desktop/tri/images/ISOSCLES .gif" alt="">
 
 
-  <li>The Equilateral Triangle!!!</li><img src="images/equilatersl .jpg" alt="">
+  <li>The Equilateral Triangle!!!!</li><img src="images/equilatersl .jpg" alt="">
 
 
   <li>The Scalene Triangle!!!!</li><img src="/home/njoroge/Desktop/tri/images/scalene.gif" alt="">
